added jwt authentication to the backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jackson.serialization.fail-on-empty-beans=false
+
+# JWT Configuration
+jwt.secret-key=noteflow-super-secret-key-change-this-in-production-minimum-256-bits
+jwt.token.issuer=noteflow
+jwt.token.lifetime=24h
+
+# CORS Configuration  
+cors.allowed-origins=http://localhost:8080,http://10.0.2.2:8080
+
