--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,24 @@
-spring.application.name=noteflow-backend
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jackson.serialization.fail-on-empty-beans=false
-
 # JWT Configuration
-jwt.secret-key=noteflow-super-secret-key-change-this-in-production-minimum-256-bits
+jwt.secret-key=noteflow-super-secret-key-must-be-at-least-256-bits-long-for-hs256-algorithm-security
 jwt.token.issuer=noteflow
 jwt.token.lifetime=24h
 
-# CORS Configuration  
+# CORS Configuration
 cors.allowed-origins=http://localhost:8080,http://10.0.2.2:8080
 
+# H2 Console (development only)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Database Configuration
+spring.datasource.url=jdbc:h2:mem:noteflowdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+# Server Configuration
+server.port=8080
