--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.jpa.show-sql=true
 
 # Server Configuration
 server.port=8080
+
+# Logging Configuration
+logging.level.com.noteflow.noteflow_backend.security=DEBUG
+logging.level.com.noteflow.noteflow_backend.controller=DEBUG
